--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ install:
   - pip install -r requirements_dev.txt
   - pip install -e .
 script:
-  - pytest
+  - pytest --cov=notebookc
+after_success:
+  - coveralls
